crates/aven-check/tests/fixtures/check/valid/comptime-omit-filter.av
User = { name: Text, email: Text }
user : User = { name: "Ada", email: "ada@x.dev" }
omit2 = (o: {..r}, @drop: keysOf(r)@{}) => { keysOf(o) -> k, !drop.has(k); (k, o[k]) }
result : { email: Text } = omit2(user, @{"name"})
