crates/aven-check/tests/fixtures/check/invalid/comptime-type-map-non-record.av
clone = (object) => { keysOf(object) -> k; (k, object[k]) }
Cloned = clone(Text)
